# cargotom

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
crates/cargotom/: Cargo.toml
crates/cargotom/src/: main.rs
crates/info-provider/: Cargo.toml
crates/info-provider/src/: api.rs  downloader.rs  lib.rs  local.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: actions.rs  analyze.rs  context.rs  hover.rs  lib.rs  lsp.rs  util.rs  utils.rs
crates/lsp/src/lsp/: code_action.rs  commands.rs  completion.rs  format.rs  hover.rs  inlay_hint.rs  intitialize.rs  main.rs  mod.rs
crates/old/crate_info/: Cargo.toml
crates/old/crate_info/src/: api.rs  lib.rs  shared.rs
crates/old/lsp/: Cargo.toml
crates/old/lsp/src/: main.rs
crates/old/lsp/src/lsp/: code_action.rs  completion.rs  format.rs  hover.rs  intitialize.rs  mod.rs
crates/old/parser/: Cargo.toml  cargo.json
crates/old/parser/src/: dependencies.rs  raw_to_tree.rs  tree_to_struct.rs  util.rs  workspace.rs
crates/old/parser/src/structure/: info.rs  positioned.rs  raw.rs
crates/old/util/: Cargo.toml
crates/old/util/src/: config.rs  lib.rs
crates/parser/: Cargo.toml  Cargo.toml_test  cargo.json
crates/parser/src/: analyze.rs  config.rs  dependencies.rs  features.rs  format.rs  lib.rs  lock.rs  static_structure.rs  toml.rs  tree.rs  tree_to_struct.rs  workspace.rs
crates/parser/src/structs/: deps.rs  feat.rs  lock.rs  mod.rs  version.rs
crates/parser/src/structure/: lock.rs  mod.rs  positioned.rs  raw.rs
crates/rust-version/: Cargo.toml
crates/rust-version/src/: lib.rs
crates/util/: Cargo.toml
crates/util/src/: config.rs
src/: api.rs  crate_lookup.rs  generate_tree.rs  git.rs  helper.rs  lock.rs  lsp.rs  main.rs  rust_version.rs
