[workspace.package]
version = "2.0.0"
edition = "2021"

[workspace]
members = [
    "crates/cargotom",
    "crates/info-provider",
    "crates/lsp",
    "crates/parser",
    "crates/rust-version",
]
exclude = ["zed-cargotom"]
default-members = ["crates/cargotom"]
resolver = "2"

[workspace.dependencies]
serde = "1.0.219"
url = "2.5.2"
reqwest = "0.12.8"
tokio = "1.40.0"
toml = "0.8.19"
proctitle = "0.1.1"
glob = "0.3.2"
serde_json = "1.0.128"
trie-rs = "0.4.2"
urlencoding = "2.1.3"
rust-version = { path = "./crates/rust-version" }
taplo = { git = "https://github.com/frederik-uni/taplo" }
tcp-struct = { git = "https://github.com/frederik-uni/tcp-struct" }
parser = { path = "./crates/parser" }
lsp = { path = "./crates/lsp" }
info-provider = { path = "./crates/info-provider" }
crate_info = { path = "./crates/crate_info" }
tower-lsp = { version = "0.20.0" }
ropey = { version = "1.6.1" }
