[workspace.package]
version = "2.0.1"
edition = "2021"

[workspace]
members = [
    "crates/cargotom",
    "crates/info-provider",
    "crates/lsp",
    "crates/parser",
    "crates/rust-version",
]
exclude = ["zed-cargotom"]
default-members = ["crates/cargotom"]
resolver = "2"

[workspace.dependencies]
serde = "1.0.219"
url = "2.5.4"
reqwest = "0.12.15"
tokio = "1.44.2"
toml = "0.8.20"
proctitle = "0.1.1"
glob = "0.3.2"
serde_json = "1.0.140"
trie-rs = "0.4.2"
urlencoding = "2.1.3"
tower-lsp = "0.20.0"
ropey = "1.6.1"
webbrowser = "1.0.4"
anyhow = "1.0"
rust-version = { path = "./crates/rust-version" }
taplo = { git = "https://github.com/frederik-uni/taplo" }
tcp-struct = { git = "https://github.com/frederik-uni/tcp-struct" }
parser = { path = "./crates/parser" }
lsp = { path = "./crates/lsp" }
info-provider = { path = "./crates/info-provider" }
crate_info = { path = "./crates/crate_info" }
async-recursion = { version = "1" }
