[workspace.package]
version = "2.3.12"
edition = "2021"

[workspace]
members = [
    "crates/cargotom",
    "crates/info-provider",
    "crates/lsp",
    "crates/parser",
    "crates/rust-version",
]
exclude = ["zed-cargotom"]
default-members = ["crates/cargotom"]
resolver = "2"

[workspace.dependencies]
html2md = "0.2.15"
serde = "1.0"
url = "2.5"
reqwest = "0.12"
tokio = "1.47"
toml = "0.9"
proctitle = "0.1.1"
glob = "0.3"
serde_json = "1.0"
trie-rs = "0.4.2"
urlencoding = "2.1.3"
tower-lsp = "0.20.0"
ropey = "1.6.1"
webbrowser = "1.0"
anyhow = "1.0"
rust-version = { path = "./crates/rust-version" }
taplo = { git = "https://github.com/frederik-uni/taplo" }
tcp-struct = { git = "https://github.com/frederik-uni/tcp-struct" }
parser = { path = "./crates/parser" }
lsp = { path = "./crates/lsp" }
info-provider = { path = "./crates/info-provider" }
crate_info = { path = "./crates/crate_info" }
async-recursion = { version = "1" }
byteorder = "1.5.0"
indexmap = "2.11"
regex = "1.11"
fst = "0.4.7"

[patch.crates-io]
html2md = { git = "https://gitlab.com/o0Frederik0o/html2md.git" }
