[package]
name = "info-provider"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
anyhow = "1.0"
rust-version.workspace = true
