[package]
name = "info-provider"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true, features = [ "json", ] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
urlencoding.workspace = true
anyhow.workspace = true
rust-version.workspace = true
