[package]
name = "lsp"
version.workspace = true
edition.workspace = true

[dependencies]
tower-lsp.workspace = true
tokio = { workspace = true, features = ["io-std"] }
parser = { workspace = true }
serde_json = { workspace = true }
webbrowser = { workspace = true }
info-provider = { workspace = true }
rust-version.workspace = true
serde = { workspace = true, features = ["derive"] }
