[package]
name = "parser"
version.workspace = true
edition.workspace = true

[dependencies]
ropey.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
serde_json.workspace = true
taplo.workspace = true
url.workspace = true
difference = "2.0.0"
tower-lsp.workspace = true
info-provider = { workspace = true }
rust-version.workspace = true
tokio = { workspace = true, features = ["sync"] }
async-recursion.workspace = true
indexmap = { workspace = true, features = ["serde"] }
regex.workspace = true
glob.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
default = []
log-all = []
