[package]
name = "cargotom"
version.workspace = true
edition.workspace = true

[dependencies]
parser = { workspace = true }
util = { workspace = true }
crate_info = { workspace = true }
serde_json = { workspace = true }
tcp-struct = { workspace = true }
glob = { workspace = true }
proctitle = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std"] }
tower-lsp = "0.20.0"
clap = { version = "4.5.35", features = ["derive"] }
webbrowser = "1.0.4"
